--- a/index.html
+++ b/index.html
@@ -8,6 +8,10 @@
 </head>
 <body>
     <h1>Odin Recipes</h1>
-    <a href="/Recipes/lasagna.html">Lasagna!</a>
+    <ul>
+    <li><a href="/Recipes/lasagna.html">Lasagna!</a></li>
+    <li><a href="/Recipes/meatballs.html">Meatballs!</a></li>
+    <li><a href="/Recipes/polenta.html">Polenta!</a></li>
+</ul>
 </body>
 </html>
